Edit writings form

--- a/app/views/writings/_form.html.erb
+++ b/app/views/writings/_form.html.erb
@@ -11,6 +11,21 @@
     </div>
   <% end %>
 
+  <p>
+    <%= form.label :name_ua %><br>
+    <%= form.text_field :name_ua %>
+  </p>
+
+  <p>
+    <%= form.label :description_ua %><br>
+    <%= form.text_area :description_ua %>
+  </p>
+
+  <p>
+    <%= form.label :genre %><br>
+    <%= form.text_area :genre %>
+  </p>
+
   <div class="actions">
     <%= form.submit %>
   </div>
