--- a/app/views/writings/_form.html.erb
+++ b/app/views/writings/_form.html.erb
@@ -22,8 +22,13 @@
   </p>
 
   <p>
-    <%= form.label :genre %><br>
-    <%= form.text_area :genre %>
+    <%= form.label :series_count %><br>
+    <%= form.text_field :series_count %>
+  </p>
+
+  <p>
+    <%= form.label :release_date %><br>
+    <%= form.text_field :release_date %>
   </p>
 
   <div class="actions">
