--- a/app/views/writings/show.html.erb
+++ b/app/views/writings/show.html.erb
@@ -11,12 +11,7 @@
 </p>
 
 <p>
-  <strong>Жанр:</strong>
-  <%= @writing.genre %>
-</p>
-
-<p>
-  <strong>Кылькысть серій:</strong>
+  <strong>Кількість серій:</strong>
   <%= @writing.series_count %>
 </p>
 
