Fix ShikiAPI gem

--- a/app/views/writings/index.html.erb
+++ b/app/views/writings/index.html.erb
@@ -10,6 +10,7 @@
   </thead>
 
   <tbody>
+    <p>Animes shikimory test: <%= @animes[0] %></p>
     <% @writings.each do |writing| %>
       <tr>
         <td><%= writing.name_ua %></td>
