--- a/app/views/writings/index.html.erb
+++ b/app/views/writings/index.html.erb
@@ -10,7 +10,7 @@
   </thead>
 
   <tbody>
-    <p>Animes shikimory test: <%= @animes[0] %></p>
+    <%= link_to "Search",  searches_path %> 
     <% @writings.each do |writing| %>
       <tr>
         <td><%= writing.name_ua %></td>
