--- a/app/views/writings/index.html.erb
+++ b/app/views/writings/index.html.erb
@@ -13,7 +13,7 @@
     <%= link_to "Search",  searches_path %> 
     <% @writings.each do |writing| %>
       <tr>
-        <td><%= writing.name_ua %></td>
+        <td><%= writing.name_en %></td>
         <td><%= link_to 'Show', writing %></td>
         <td><%= link_to 'Edit', edit_writing_path(writing) %></td>
         <td><%= link_to 'Destroy', writing, method: :delete, data: { confirm: 'Are you sure?' } %></td>
