--- a/app/views/writings/show.html.erb
+++ b/app/views/writings/show.html.erb
@@ -1,13 +1,15 @@
 <p id="notice"><%= notice %></p>
 
+<img src="https://shikimori.org<%= @writing.shikimory_img %>">
+
 <p>
   <strong>Ім'я:</strong>
-  <%= @writing.name_ua %>
+  <%= @writing.name_en %>
 </p>
 
 <p>
   <strong>Опис:</strong>
-  <%= @writing.description_ua %>
+  <%= @writing.description_ru %>
 </p>
 
 <p>
