--- a/app/views/topics/_form.html.erb
+++ b/app/views/topics/_form.html.erb
@@ -19,7 +19,7 @@
 
   <div class="field">
     <%= form.label :description %>
-    <%= form.text_field :description %>
+    <%= form.text_area :description %>
   </div>
 
 
