--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -17,7 +17,7 @@
       <tr>
         <td><%= topic.name %></td>
         <td><%= topic.description %></td>
-        <td><%= topic.creator %></td>
+        <td><%= User.find(topic.creator).email %></td>
         <td><%= link_to 'Show', topic %></td>
         <td><%= link_to 'Edit', edit_topic_path(topic) %></td>
         <td><%= link_to 'Destroy', topic, method: :delete, data: { confirm: 'Are you sure?' } %></td>
