--- a/app/views/writings/show.html.erb
+++ b/app/views/writings/show.html.erb
@@ -22,17 +22,24 @@
   <%= @writing.release_date %>
 </p>
 
-<%= link_to 'Edit', edit_writing_path(@writing) %> |
-<%= link_to 'Create Topic', new_topic_path(:writing_id => @writing.id) %>
+<p>
+  <strong><a href="https://myanimelist.net/anime/<%= @writing.shikimoryId %>">Go MyAnimeList.org</a></strong>
+</p>
+<p>
+  <strong><a href="https://shikimori.org/animes/<%= @writing.shikimoryId %>">Go Шікіморі</a></strong>
+</p>
+
+<%= link_to 'Edit Title', edit_writing_path(@writing) %>
 
 <h1>Topics</h1>
-
+<%= link_to 'Create Topic', new_topic_path(:writing_id => @writing.id) %>
 <table>
   <thead>
     <tr>
       <th>Name</th>
       <th>Description</th>
       <th>Creator</th>
+      <th>Кількість коментів</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -40,9 +47,10 @@
   <tbody>
     <% @topics.each do |topic| %>
       <tr>
-        <td><%= topic.name %></td>
+        <td><%= link_to topic.name , topic %></td>
         <td><%= topic.description %></td>
-        <td><%= topic.creator %></td>
+        <td><%= User.find(topic.creator).email %></td>
+        <td><%= Topic.new.comments_count(topic.id) %></td>
         <td><%= link_to 'Show', topic %></td>
         <td><%= link_to 'Edit', edit_topic_path(topic) %></td>
         <td><%= link_to 'Destroy', topic, method: :delete, data: { confirm: 'Are you sure?' } %></td>
