--- a/app/views/writings/show.html.erb
+++ b/app/views/writings/show.html.erb
@@ -23,10 +23,10 @@
 </p>
 
 <p>
-  <strong><a href="https://myanimelist.net/anime/<%= @writing.shikimoryId %>">Go MyAnimeList.org</a></strong>
+  <strong><a href="https://myanimelist.net/anime/<%= @writing.shikimoryId %>" target="_blank">Go MyAnimeList.org</a></strong>
 </p>
 <p>
-  <strong><a href="https://shikimori.org/animes/<%= @writing.shikimoryId %>">Go Шікіморі</a></strong>
+  <strong><a href="https://shikimori.org/animes/<%= @writing.shikimoryId %>" target="_blank">Go Шікіморі</a></strong>
 </p>
 
 <%= link_to 'Edit Title', edit_writing_path(@writing) %>
