--- a/app/views/writings/_form.html.erb
+++ b/app/views/writings/_form.html.erb
@@ -17,6 +17,11 @@
   </p>
 
   <p>
+    <%= form.label :name_en %><br>
+    <%= form.text_field :name_en %>
+  </p>
+
+  <p>
     <%= form.label :description_ua %><br>
     <%= form.text_area :description_ua %>
   </p>
