--- a/app/views/layouts/_navs.html.erb
+++ b/app/views/layouts/_navs.html.erb
@@ -1,3 +1,4 @@
+<%= stylesheet_link_tag    'reset', media: 'all', 'data-turbolinks-track': 'reload' %>
 <%= stylesheet_link_tag    'navs', media: 'all', 'data-turbolinks-track': 'reload' %>
 
 <div class="navs">
