--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,11 +1,17 @@
-<h2>Sign up</h2>
+<%= stylesheet_link_tag    'reset', media: 'all', 'data-turbolinks-track': 'reload' %>
+<%= stylesheet_link_tag    'registration', media: 'all', 'data-turbolinks-track': 'reload' %>
+<div class ="bod">
+<div class ="body">
+<div class="form">
+<div class="h2">SIGN UP</div>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
   <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <div class="label1">
+    <label for="user_email">Email:</label></br></div>
+    <input autofocus="autofocus" autocomplete="email" type="email" value name="user[email]" id="user_email">
   </div>
 
   <div class="field">
@@ -21,9 +27,11 @@
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
+  <input type="submit" value="Sign Up" id="submit">
+ 
 <% end %>
+</div>
 
 <%= render "devise/shared/links" %>
+</div>
+</div>
