--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,9 +12,10 @@
   <body>
     <%= render 'layouts/header' %>
     <%= render 'layouts/navs' %>
-   
+    <%= yield %>
+    <%= render 'layouts/footer' %>
 
    
-    <%= yield %>
+    
   </body>
 </html>
