--- a/app/assets/stylesheets/footer.css
+++ b/app/assets/stylesheets/footer.css
@@ -1,26 +1,16 @@
 .footer{
-  font-size: 12px;
-  padding-top: 30px;
+  background-color: #2e3951;
+  margin-right: auto;
+    margin-left: auto;
+    padding-left: 10px;
+    padding-right: 10px;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  width: 100%;
+    max-width: 1100px;
 }
-.f{
-    padding-left: 0;
-  }
-.foo{
-      position:relative; 
-      left: 20%;
-      font-family: "Arial";
-      display: inline;
-      padding-right: 15px;
-      color: #2e3951;
-      letter-spacing: 1px;
-    }
-  
-.foo1{
-      position:relative; 
-      left: 20%;
-      display: inline;
-      padding-right: 15px;
-      color: #1c2331;
-      font-family: "Arial";
-      letter-spacing: 1px;
+
+.foot{
+  background-color: #2e3951;
 }
+
