--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,16 +1,42 @@
 <%= stylesheet_link_tag    'reset', media: 'all', 'data-turbolinks-track': 'reload' %>
 <%= stylesheet_link_tag    'footer', media: 'all', 'data-turbolinks-track': 'reload' %>
+<div class="foot">
+ <div class="footer">
 
- <footer class="container footer">
-      <div class="foot">
-        <div class="f">
-          <div class="foo">ABOUT US</div>
-          <div class="foo">CONTACT</div>
-          <div class="foo">FAQ</div>
-          <div class="foo">ANIME</div>
-          <div class="foo">MANGA</div>
-          <div class="foo">LIGHT NOVEL</div>
-          <div class="foo">FORUM</div>
-          <div class="foo">NEWS</div>
-          <div class="foo1"> © 2019 NYAN <div>
-    </footer>
+      <ul class="nav justify-content-center">
+    <li class="nav-item">
+      <a class="nav-link" href="/">About Us</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/">Contact</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/">FAQ</a>
+    </li>
+     <li class="nav-item">
+      <a class="nav-link" href="/">Anime</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/">Manga</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/">Light Novel</a>
+    </li>
+
+    <li class="nav-item">
+      <a class="nav-link" href="/">News</a>
+    </li>
+      <li class="nav-item">
+      <a class="nav-link" href="/">Forum</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/">© 2019 Nyan</a>
+    </li>
+   
+
+  </ul>
+
+
+</div>
+
+</div>
