--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,29 +5,29 @@
 
       <ul class="nav justify-content-center">
     <li class="nav-item">
-      <a class="nav-link" href="/">About Us</a>
+      <a class="nav-link" href="/">Про нас</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="/">Contact</a>
+      <a class="nav-link" href="/">Контакти</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="/">FAQ</a>
     </li>
      <li class="nav-item">
-      <a class="nav-link" href="/">Anime</a>
+      <a class="nav-link" href="/">Аніме</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="/">Manga</a>
+      <a class="nav-link" href="/">Манга</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="/">Light Novel</a>
+      <a class="nav-link" href="/">Ранобе</a>
     </li>
 
     <li class="nav-item">
-      <a class="nav-link" href="/">News</a>
+      <a class="nav-link" href="/">Новини</a>
     </li>
       <li class="nav-item">
-      <a class="nav-link" href="/">Forum</a>
+      <a class="nav-link" href="/">Форум</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="/">© 2019 Nyan</a>
