--- a/app/assets/stylesheets/registration.css
+++ b/app/assets/stylesheets/registration.css
@@ -1,8 +1,8 @@
 .bod {
-	background: #d0d6e2;
+	background: #f5f5f5;
 }
 .body{
-	background: #d0d6e2;
+	background: #f5f5f5;
 	margin-right: auto;
     margin-left: auto;
     margin-top: auto;
@@ -10,7 +10,7 @@
     padding-left: 10px;
     padding-right: 10px;
     padding-bottom: 10px;
-    padding-top: 80px;
+    padding-top: 134px;
 	width: 100%;
     max-width: 1100px;
 }
@@ -63,8 +63,95 @@ input[type=submit]:hover {
 }
 
 
-.label1 {
-	font-size: 30px;
-	font-family: "Arial";
-	letter-spacing: 2px;
+
+.field {
+    padding-bottom: 25px;
+    color: #b1bace;
+    font-size: 19px;
+    font-family: "Arial";
+    letter-spacing: 2px;
+  
+}
+
+.lab {
+    padding: 5px;
+}
+
+
+input[type=password] {
+    width: 100%;
+    height: 35px;
+    color: #b1bace;
+    font-size: 17px;
+    box-sizing: border-box;
+    border: 2px solid #59698d;
+    border-radius: 4px;
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
+    outline: none;
+    background-color: #2e3951;
+    padding: 5px;
+}
+
+input[type=email] {
+    width: 100%;
+    height: 35px;
+    color: #b1bace;
+    font-size: 17px;
+    box-sizing: border-box;
+    border: 2px solid #59698d;
+    border-radius: 4px;
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
+    outline: none;
+    background-color: #2e3951;
+    padding: 5px;
+}
+
+input[type=email]:focus {
+    border: 2px solid #929fba;
+    border-radius: 4px;
+}
+
+input[type=password]:focus {
+    border: 2px solid #929fba;
+    border-radius: 4px;
+}
+
+.login {
+  padding-top: 50px;
+  padding-left: 47%;
+  padding-bottom: 10px;
+}
+
+.instruction {
+
+    padding-left: 35%;
+    padding-bottom: 50px;
+}
+
+
+.login a {
+    color: #2e3951;
+    text-decoration: none;
+    font-family: "Arial";
+    letter-spacing: 1px;
+    font-size: 20px;
+}
+
+.instruction a {
+    color: #2e3951;
+    text-decoration: none;
+    font-family: "Arial";
+    letter-spacing: 1px;
+    font-size: 20px;
+}
+
+.instruction a:hover {
+    color: black;
+    
+}
+
+.login a:hover {
+    color: black;
 }
