--- a/app/views/writings/_form.html.erb
+++ b/app/views/writings/_form.html.erb
@@ -36,6 +36,11 @@
     <%= form.text_field :release_date %>
   </p>
 
+  <p>
+    <%= form.label :avatar %>
+    <%= form.file_field :avatar %>
+  </p>
+
   <div class="actions">
     <%= form.submit %>
   </div>
