--- a/app/views/writings/show.html.erb
+++ b/app/views/writings/show.html.erb
@@ -1,7 +1,5 @@
 <p id="notice"><%= notice %></p>
-
-<img src="https://shikimori.org<%= @writing.shikimory_img %>">
-
+<%= image_tag @writing.avatar %>
 <p>
   <strong>Ім'я:</strong>
   <%= @writing.name_en %>
@@ -33,6 +31,8 @@
 
 <h1>Topics</h1>
 <%= link_to 'Create Topic', new_topic_path(:writing_id => @writing.id) %>
+
+ <% if @topics.count != 0 %>
 <table>
   <thead>
     <tr>
@@ -49,7 +49,11 @@
       <tr>
         <td><%= link_to topic.name , topic %></td>
         <td><%= topic.description %></td>
-        <td><%= User.find(topic.creator).email %></td>
+        <% if User.find(topic.creator).name %>
+          <td><%= User.find(topic.creator).name %></td>
+        <% else %>
+          <td><%= User.find(topic.creator).email %></td>
+        <% end %>
         <td><%= Topic.new.comments_count(topic.id) %></td>
         <!-- <td><%= link_to 'Show', topic %></td>
         <td><%= link_to 'Edit', edit_topic_path(topic) %></td>
@@ -58,6 +62,7 @@
     <% end %>
   </tbody>
 </table>
+<% end %>
     <h2>Gallery</h2>
 
       <%= form_with(url:add_image_path, local: true ) do |form| %>
