--- a/app/views/writings/index.html.erb
+++ b/app/views/writings/index.html.erb
@@ -1,4 +1,9 @@
 <p id="notice"><%= notice %></p>
+<% if user_signed_in? %>
+    <%= link_to 'Мій профіль', user_profile_path(current_user.id) %>
+  <% end %>
+
+<%= link_to 'Усі топіки', topics_path %>
 
 <h1>Writings</h1>
 
@@ -13,9 +18,11 @@
     <h4><%= link_to "Search",  searches_path %></h4>
     <% @writings.each do |writing| %>
       <tr>
-        <!-- Вбивця браузерів <td><img src="https://shikimori.org<%= writing.shikimory_img %>"></td> -->
         <% if writing.avatar.attached? %>
           <td><%= image_tag writing.avatar %></td>
+          <% else %>
+           <!-- Вбивця браузерів (Після фікса -> пачті) -->
+           <td><img src="https://shikimori.org<%= writing.shikimory_img %>"></td> 
         <% end %>
         <td><%= link_to writing.name_en, writing%></td>
         <td><%= link_to 'Edit', edit_writing_path(writing) %></td>
