Bootstrap 4 + navbar + index

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,7 +9,28 @@
  * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
- *
- *= require_tree .
- *= require_self
  */
+ @import "bootstrap";
+
+ .navbar{
+     background-color: #1c2331;
+ }
+
+ .navbar a:link {
+    color: #b1bace;
+  }
+  
+  /* visited link */
+  .navbar a:visited {
+    color: #b1bace;
+  }
+  
+  /* mouse over link */
+  .navbar a:hover {
+    color: #b1bace;
+  }
+  
+  /* selected link */
+  .navbar a:active {
+    color: #b1bace;
+  }
