--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,6 +11,9 @@
  * It is generally better to create a new file per style scope.
  */
  @import "bootstrap";
+ @import "font-awesome-sprockets";
+ @import "font-awesome";
+ @import "users";
 
  .navbar{
      background-color: #1c2331;
