--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,34 +1,40 @@
-<h2>Sign up</h2>
+<%= stylesheet_link_tag    'reset', media: 'all', 'data-turbolinks-track': 'reload' %>
+<%= stylesheet_link_tag    'registration', media: 'all', 'data-turbolinks-track': 'reload' %>
+<div class ="bod">
+<div class ="body">
+<div class="form">
+<div class="h2">SIGN UP</div>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
   <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    
+    <div class="lab"><label for="user_email">Пошта:</label></div>
+    <input autofocus="autofocus" autocomplete="email" type="email" value name="user[email]" id="user_email">
   </div>
 
   <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
+   <div class="lab"><label for="user_password">Пароль:</label></div>
+   <div class="lab"><em>(6 символів мінімум)</em></div>
+   
+   <input autocomplete="new-password" type="password" name="user[password]" id="user_password">
   </div>
 
   <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+    <div class="lab"><label for="user_password_confirmation">Підтвердження паролю:</label></div>
+    
+    <input autocomplete="new-password" type="password" name="user[password_confirmation]" id="user_password_confirmation">
+  
   </div>
 
-  <div class="field">
-    <%= f.label :avatar %>
-    <%= f.file_field :avatar %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
+  <input type="submit" value="Sign Up" id="submit">
+ 
 <% end %>
+</div>
 
-<%= render "devise/shared/links" %>
+<div class="login"><a href="/users/sign_in">Log In</a></div>
+<div class="instruction"><a href="/users/unlock/new">Didn't receive unlock instructions?</a></div>
+</div>
+</div>
+
