--- a/app/assets/stylesheets/registration.css
+++ b/app/assets/stylesheets/registration.css
@@ -78,6 +78,8 @@ input[type=submit]:hover {
 }
 
 
+
+
 input[type=password] {
     width: 100%;
     height: 35px;
@@ -116,6 +118,24 @@ input[type=email]:focus {
 input[type=password]:focus {
     border: 2px solid #929fba;
     border-radius: 4px;
+}
+
+.logs {
+    padding-top: 50px;
+  padding-left: 44%;
+  padding-bottom: 10px;
+}
+
+.logs a {
+    color: #2e3951;
+    text-decoration: none;
+    font-family: "Arial";
+    letter-spacing: 1px;
+    font-size: 20px;
+}
+
+.logs a:hover {
+    color: black;
 }
 
 .login {
