--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -1,16 +1,27 @@
-<h2>Resend unlock instructions</h2>
+<%= stylesheet_link_tag    'reset', media: 'all', 'data-turbolinks-track': 'reload' %>
+<%= stylesheet_link_tag    'registration', media: 'all', 'data-turbolinks-track': 'reload' %>
+<div class ="bod">
+<div class ="body">
+<div class="form">
+<div class="h2">UNLOCK INSTRUCTIONS</div>
 
 <%= form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post }) do |f| %>
   <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+
+<div class="field">
+     <div class="lab"><label for="user_email">Пошта:</label></div>
+    <input autofocus="autofocus" autocomplete="email" type="email" value name="user[email]" id="user_email">
   </div>
 
-  <div class="actions">
-    <%= f.submit "Resend unlock instructions" %>
-  </div>
+  <input type="submit" value="Resend" id="submit">
+
+ 
 <% end %>
 
-<%= render "devise/shared/links" %>
+</div>
+<div class="logs"><a href="/users/sign_up">Sign Up | </a><a href="/users/sign_up">| Log In</a></div>
+
+</div>
+</div>
+
