--- a/app/views/searches/index.html.erb
+++ b/app/views/searches/index.html.erb
@@ -1,36 +1,32 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Searches</h1>
-
-  <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <body>
-    <%= form_tag("/searches", method: "get") do %>
-      <%= label_tag(:q, "Search for:") %>
-      <%= text_field_tag(:q) %>
-      <%= submit_tag("Search") %>
-    <% end %>
-
-    <h3>ShikiDB</h3>
-    <h4>Результатів: <i><%= @searchesDB.count %></i></h4>
+<%= stylesheet_link_tag    'reset', media: 'all', 'data-turbolinks-track': 'reload' %>
+<%= stylesheet_link_tag    'searches', media: 'all', 'data-turbolinks-track': 'reload' %>
+<div class="sear">
+ <div class="searc">
+  Результати пошуку: <i><%= @searchesDB.count %></i>
+  </div>
+    <div class="card-columns">
     <% @searchesDB.each do |search| %>
-      <tr>
-        <img src="https://shikimori.org<%= search['image']['original'] %>">
-        <td><b>Name:</b> <%= link_to search['name'], controller: "writings", action: "show", id: Writing.where(shikimoryId: search['id']).first.id %></td>
-        <td><b>Name ru:</b> <%= search['russian'] %></td>
-        <td><b>Id:</b> <%= search['shikimoryId'] %></td>
-        <td><b>Кількість серій:</b> <%= search['episodes'] %></td>
-        <td><b>Дата виходу 1-шої серії:</b> <%= search['aired_on'] %></td>
-        <td><b>Вихід останньої серії:</b> <%= search['released_on'] %></td>
-      </tr>
-    </br>
+      <div class="card">
+     
+         <img src="https://shikimori.org<%= search['image']['original'] %>" class="card-img-top">
+          
+
+         <div class="card-body">
+         <p class="card-text">
+          <b>Назва:</b> <%= link_to search['name'], controller: "writings", action: "show", id: Writing.where(shikimoryId: search['id']).first.id %> 
+          <p><%= search['russian'] %></p>
+          <%= search['shikimoryId'] %>
+          <p><b>Кількість серій:</b> <%= search['episodes'] %></p>
+          <p><b>Перша серія:</b> <%= search['aired_on'] %></p>
+          <p><b>Остання серія:</b> <%= search['released_on'] %></p>
+          </p>
+        </div>
+     
+      </div>
+
     <% end %>
-  </body>
+    </div>
+</div>
 
-<br>
 
-<%= link_to 'New Search', new_search_path %>
+
