--- a/app/assets/stylesheets/header.css
+++ b/app/assets/stylesheets/header.css
@@ -36,12 +36,10 @@ input[type=text] {
     transition: 0.5s;
     outline: none;
     background-color: #2e3951;
-    background-image: url('/images/15.png');
-    background-size: 20px, 20px;
-    background-position: left; 
-    background-repeat: no-repeat;
-    background-position: 8px 8px;
-    padding: 7px 20px 7px 40px;
+  
+    padding-top: 7px;
+    padding-bottom: 7px;
+    padding-left: 8px;
 }
 
 input[type=text]:focus {
