--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,72 +1,73 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<%= stylesheet_link_tag    'reset', media: 'all', 'data-turbolinks-track': 'reload' %>
+<%= stylesheet_link_tag    'edit-profile', media: 'all', 'data-turbolinks-track': 'reload' %>
+<div class="edit-profile">
+<div class="edit">
+
+
+<div class="h7">Edit <%= resource_name.to_s.humanize %></div>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+<div class="field">
+<div class="lab"><label for="user_email">Пошта:</label></div>
+<input autofocus="autofocus" autocomplete="email" type="email" value name="user[email]" id="user_email">
+</div>
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
+<% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+<div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+<% end %>
 
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
-    <% end %>
-  </div>
+<div class="field">
+<div class="lab"><label for="user_password">Пароль: (залиште поле вільним, якщо не змінюєте пароль)</label></div>
+<input autocomplete="new-password" type="password" name="user[password]" id="user_password">
+<div class="lab"><em>(6 символів мінімум)</em></div>
+</div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+<div class="field">
+<div class="lab"><label for="user_password_confirmation">Підтвердження паролю:</label></div>
+<%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+</div>
 
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "current-password" %>
-  </div>
+<div class="field">
+<div class="lab"><label for="user_current_password">Поточний пароль: (для підтвердження змін)</label></div>
+<%= f.password_field :current_password, autocomplete: "current-password" %>
+</div>
 
   <% if resource.avatar.attached? %>
     <%= image_tag resource.avatar %>
   <% end %>
 
   <div class="field">
-    <%= f.label :avatar %>
+    <label for="user_avatar">Аватар:</label>
     <%= f.file_field :avatar %>
   </div>
 
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name, autofocus: true %>
-  </div>
+ <div class="field">
+<div class="lab"><label for="user_name">Ім'я:</label></div>
+<input autofocus="autofocus" type="text" name="user[name]" id="user_name">
+</div>
+
+ <div class="field">
+<div class="lab"><label for="user_surname">Прізвище:</label></div>
+<%= f.text_field :surname, autofocus: true %>
+</div>
 
   <div class="field">
-    <%= f.label :surname %><br />
-    <%= f.text_field :surname, autofocus: true %>
-  </div>
+<div class="lab"><label for="user_city">Місто:</label></div>
+<%= f.text_field :city, autofocus: true %>
+</div>
 
-  <div class="field">
-    <%= f.label :city %><br />
-    <%= f.text_field :city, autofocus: true %>
-  </div>
+<div class="field">
+<div class="lab"><label for="user_birthday">Вік:</label></div>
+<input autofocus="autofocus" min="12" max="99" type="number" name="user[birthday]" id="user_birthday">
+</div>
 
-  <div class="field">
-    <%= f.label :birthday, "Age" %><br />
-    <%= f.number_field :birthday, within: 12...100, autofocus: true %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
+ <input type="submit" name="commit" value="Update" data-disable-with="Update">
 <% end %>
 
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+<div class="h8">Незадоволені?</div>
+<%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %>
+<div class="link"><%= link_to "Back", :back %></div>
+</div>
+</div>
