--- a/app/assets/stylesheets/profile.css
+++ b/app/assets/stylesheets/profile.css
@@ -19,6 +19,7 @@
 	font-family: "Arial";
 	font-size: 20px;
 	color: #b1bace;
+	padding-top: 35px;
 }
 
 .prof {
@@ -63,4 +64,24 @@
     border: none !important;
 }
 
+.image {
 
+
+  padding-left: 310px;
+  padding-right: 310px;
+
+}
+
+.im img {
+	width: 100%;
+	height: 100%;
+	border-radius: 50%;
+
+}
+
+.card-body p{
+	font-family: "Arial";
+	font-size:23px;
+	letter-spacing: 2px;
+	padding-top: 25px;
+}
