--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,30 +4,37 @@
 <div class="prof">
 <div class="card">
 <div class="h5">My Profile</div>
+
 <% if @user.avatar.attached? %>
+<div class="image">
+<div class="im">
     <%= image_tag @user.avatar %>
- <% end %>
-<div class="card-body">
-    <p class="card-text">
-<% if @user.name %>
-	<p><b>Ім'я: </b><%= @user.name%></p>
- <% end %>
- <% if @user.surname %>
-	<p><b>Прізвище: </b><%= @user.surname%></p>
- <% end %>
- <% if @user.name %>
-<!-- <p><b>Age: </b><%= @user.birthday %></p> -->
-	<p><b>Місто: </b><%= @user.city%></p>
+    </div>
+    </div>
  <% end %>
 
-<p><b>Пошта: </b><%= @user.email%></p>
+<div class="card-body">
+    
+<% if @user.name %>
+	<p>Ім'я: <%= @user.name%></p>
+ <% end %>
+ <% if @user.surname %>
+	<p>Прізвище: <%= @user.surname%></p>
+ <% end %>
+ <% if @user.name %>
+    
+	<p>Місто: <%= @user.city%></p>
+ <% end %>
+
+
+<p>Пошта: <%= @user.email%></p>
 <div class="button">
 <% if @user.id == current_user.id %>
 
  	<a href="/users/edit" class="btn btn-primary" role="button">Settings</a>
  <% end %>
  </div>
-</p>
+
 </div>
 
 
@@ -35,3 +42,4 @@
  </div>
 </div>
 </div>
+
