--- a/app/views/layouts/_navs.html.erb
+++ b/app/views/layouts/_navs.html.erb
@@ -15,7 +15,7 @@
       <a class="nav-link" href="#">Ранобе</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Форум</a>
+      <a class="nav-link" href="/topics">Форум</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="#">Новини</a>
