--- a/app/views/topics/edit.html.erb
+++ b/app/views/topics/edit.html.erb
@@ -1,6 +1,12 @@
-<h1>Editing Topic</h1>
+<%= stylesheet_link_tag    'reset', media: 'all', 'data-turbolinks-track': 'reload' %>
+<%= stylesheet_link_tag    'topic', media: 'all', 'data-turbolinks-track': 'reload' %>
+<div class="top">
+<div class="topi">
+<div class="h24">Editing Topic</div>
 
 <%= render 'form', topic: @topic %>
 
-<%= link_to 'Show', @topic %> |
-<%= link_to 'Back', topics_path %>
+<div class="link"><%= link_to 'Show |', @topic %> 
+<%= link_to "| Back", :back %></div>
+</div>
+</div>
