--- a/app/views/writings/show.html.erb
+++ b/app/views/writings/show.html.erb
@@ -50,10 +50,10 @@
 <table>
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Description</th>
-      <th>Creator</th>
-      <th>Кількість коментів</th>
+      <th>Назва</th>
+      <th>Текст</th>
+      <th>Автор</th>
+      <th>Кількість коментарів</th>
       <th colspan="3"></th>
     </tr>
   </thead>
