--- a/app/assets/stylesheets/show.css
+++ b/app/assets/stylesheets/show.css
@@ -77,6 +77,7 @@ width:200px;
 }
 
 .gall {
+	padding-top: 20px;
 	font-family: "Arial";
 	color: #1c2331;
 	letter-spacing: 2px;
@@ -115,4 +116,33 @@ input[type=submit] {
 input[type=submit]:hover {
     opacity: 1;
     border: 1px solid #1c2331;
+}
+
+tr th {
+	padding-right: 150px;
+}
+
+.h14 {
+	font-family: "Arial";
+	margin: 0 0 0 0;
+    padding: 5px;
+    text-align:center;
+    font-size:30px;
+    color: #1c2331;
+    border-bottom:solid 1px #929fba;
+    letter-spacing: 2px;
+    padding-top: 30px;
+}
+
+.info2 {
+float:right;
+width:200px;
+font-family: "Arial";
+font-size: 23px;
+  color: #1c2331;
+  padding-top: 10px;
+}
+
+.comment {
+	padding-top: 50px;
 }
