--- a/app/views/writings/show.html.erb
+++ b/app/views/writings/show.html.erb
@@ -91,10 +91,11 @@
           <input type="submit" name="commit" value="Завантажити" data-disable-with="Завантажити">
         </div>
       <% end %>
-
+<div class="imge">
 <%   @writing.images.each do |x| %>
   <%= image_tag x %>
 <%end%>
+</div>
 </div>
 </div>
 </div>
