--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -27,7 +27,7 @@
       <a class="nav-link" href="/">Новини</a>
     </li>
       <li class="nav-item">
-      <a class="nav-link" href="/">Форум</a>
+      <a class="nav-link" href="/topics">Форум</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="/">© 2019 Nyan</a>
